samples/_failures_safe/1761546190_8b4455_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d90cceea.c: In function ‘main’:
./samples/SAFE/__tmp_d90cceea.c:175:16: error: expected declaration or statement at end of input
  175 |         struct Token token;
      |                ^~~~~
./samples/SAFE/__tmp_d90cceea.c:175:16: error: expected declaration or statement at end of input
